[gd_scene load_steps=14 format=3 uid="uid://ctc462k326p5h"]

[ext_resource type="Texture2D" uid="uid://b23tcc0ck8i24" path="res://Assets/Sprite/Tiles/tile_0114.png" id="1_kf4mf"]
[ext_resource type="Texture2D" uid="uid://dqhxd1dps6gi3" path="res://Assets/Sprite/Tilemap/SpellEffects/SparkleGreen.png" id="2_vokyc"]
[ext_resource type="Script" path="res://Entities/go_faster_potion.gd" id="2_xfvsu"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ndend"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_dtgjw"]
offsets = PackedFloat32Array(0, 0.230263, 0.460526, 0.773026, 1)
colors = PackedColorArray(0.890196, 0.858824, 0, 1, 0, 0.839216, 0, 1, 0.941176, 0, 0, 1, 1.00112e-05, 0.797722, 0.876791, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xblsr"]
gradient = SubResource("Gradient_dtgjw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6l160"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 16.67
initial_velocity_max = 61.1
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_xblsr")
anim_speed_min = 2.05
anim_speed_max = 2.4

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_oxfff"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tyhth"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 21.88
gravity = Vector3(0, -22.07, 0)
anim_speed_min = 0.8
anim_speed_max = 1.15

[sub_resource type="CircleShape2D" id="CircleShape2D_cpucr"]
radius = 6.08276

[sub_resource type="Animation" id="Animation_466gk"]
resource_name = "throb"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoFasterPotion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.115, 2.115), Vector2(2.57, 2.57), Vector2(2.115, 2.115)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GoFasterPotion:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3.33), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_q8lv0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoFasterPotion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.115, 2.115)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GoFasterPotion:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yador"]
_data = {
"RESET": SubResource("Animation_q8lv0"),
"throb": SubResource("Animation_466gk")
}

[node name="GoFasterPotion" type="Node2D"]
script = ExtResource("2_xfvsu")

[node name="GoFasterPotion" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.115, 2.115)
texture = ExtResource("1_kf4mf")

[node name="PoofParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_ndend")
scale = Vector2(2.115, 2.115)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_6l160")
texture = ExtResource("2_vokyc")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="Sparkle" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_oxfff")
scale = Vector2(2.115, 2.115)
amount = 4
process_material = SubResource("ParticleProcessMaterial_tyhth")
texture = ExtResource("2_vokyc")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(2.115, 2.115)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_cpucr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yador")
}
autoplay = "throb"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
